Fix alignment

--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -2,28 +2,71 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .header {
-  height: 72px;
+  display: flex;
+  height: 32px;
   background: darkmagenta;
   color: white;
+  justify-content: start;
+  align-items: center;
+  font-weight: 900;
+  padding-left: 16px;
 }
 
 .footer {
-  height: 72px;
+  display: flex;
+  height: 32px;
   background: #eee;
   color: darkmagenta;
+  justify-content: center;
+  align-items: center;
 }
 
 .sidebar {
+  display: flex;
+  flex-shrink: 0;
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  padding: 16px;
+  font-size: 24px;
+}
+.main {
+  display: flex;
+  flex-direction: row;
+  flex-grow: 1;
 }
 
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 46px
+  }
+
 .card {
+  display: flex;
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  flex: 1 1 160px;
+  padding: 8px;
+  margin: 16px;
+  font-size: small;
+}
+
+:link {
+  color: white;
+  text-decoration: none;
+}
+
+ul{
+  list-style: none;
+  padding: 0;
+  margin: 8px;
+  line-height: 2;
 }
